kubernetes/clusters/k0s/monitoring/thanos/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thanos
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos
  egress:
    # minio
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
